[tool.poetry]
name = "pagination-showcase"
version = "0.1.0"
description = ""
authors = ["JK Wibisono <jkwibisono@waresix.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.31"
alembic = "^1.13.2"
asyncpg = "^0.29.0"
databases = {extras = ["postgresql"], version = "^0.9.0"}
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
